--- a/style-start-gameOver.css
+++ b/style-start-gameOver.css
@@ -104,7 +104,11 @@ button {
 }
 
 button:hover {
-  background-color: var(--red);
+  background-color: var(--red-mid);
+}
+
+button:active {
+  background-color: var(--red-dark);
 }
 
 /*=======GAME OVER ===============*/
